--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
     <!-- Meta Tags for SEO -->
     <meta name="description"
-        content="Angela Minardi's professional portfolio showcasing projects in 5G Wireless Networks, Blockchain, and AI-Powered Chatbots.">
-    <meta name="keywords" content="Angela Minardi, Portfolio, 5G, Blockchain, AI Chatbot, Computer Science">
+        content="Angela Minardi's professional portfolio showcasing projects in 5G Wireless Networks, Blockchain, AI-Powered Chatbots, and Technical Writing Samples.">
+    <meta name="keywords" content="Angela Minardi, Portfolio, Technical Writing, 5G, Blockchain, AI Chatbot, Computer Science">
     <!-- Viewport for Responsive Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Hi, I'm Angela Minardi</h1>
-                <p>Passionate Computer Scientist | Networking Enthusiast | Innovator</p>
+                <p>Passionate Computer Scientist | Technical Writer | Innovator</p>
                 <a href="#projects" class="btn">Explore My Work</a>
             </div>
         </div>
@@ -77,6 +77,11 @@
                         the table. My goal is to leverage technology to drive progress and efficiency in various
                         industries.
                     </p>
+                    <p>
+                        In addition to my technical expertise, I am passionate about technical writing and documentation.
+                        I have experience drafting comprehensive user guides, technical specifications, and project
+                        documentation that communicate complex concepts clearly to diverse audiences.
+                    </p>
                 </div>
             </div>
         </div>
@@ -89,7 +94,7 @@
             <div class="education-content">
                 <div class="education-item">
                     <h3>Bachelor of Science in Computer Science</h3>
-                    <span class="date">2024</span>
+                    <span class="date">Anticipated: Spring 2025</span>
                     <p>Western Governors University</p>
                 </div>
             </div>
@@ -121,6 +126,15 @@
                     </ul>
                 </div>
                 <div class="skill-category">
+                    <h3>Documentation & Technical Writing</h3>
+                    <ul>
+                        <li>Technical Documentation</li>
+                        <li>User Guides</li>
+                        <li>API Documentation</li>
+                        <li>Content Strategy</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
                     <h3>Soft Skills</h3>
                     <ul>
                         <li>Problem-Solving</li>
@@ -149,7 +163,7 @@
                     <h3><a href="project1.html">5G Wireless Network Simulation</a></h3>
                     <p>
                         Developed a simulation tool to model and analyze 5G wireless networks, focusing on throughput,
-                        latency, and packet loss.
+                        latency, and packet loss. Created comprehensive technical documentation and user manuals to facilitate understanding and usage of the simulation tool.
                     </p>
                 </div>
                 <!-- Project 2 -->
@@ -163,7 +177,7 @@
                     <h3><a href="project2.html">Blockchain Implementation</a></h3>
                     <p>
                         Built a simplified blockchain from scratch to understand distributed ledger technology,
-                        including proof of work and hashing.
+                        including proof of work and hashing. Authored detailed documentation explaining the blockchain architecture and implementation for educational purposes.
                     </p>
                 </div>
                 <!-- Project 3 -->
@@ -177,7 +191,7 @@
                     <h3><a href="project3.html">AI-Powered Chatbot</a></h3>
                     <p>
                         Created an AI chatbot that uses machine learning and NLP to interact conversationally, serving
-                        as a personal assistant.
+                        as a personal assistant. Documented the development process, including model architecture and deployment strategies.
                     </p>
                 </div>
                 <!-- Project 4 -->
@@ -190,8 +204,7 @@
                     </div>
                     <h3><a href="project4.html">Smart-Insole Technical Design</a></h3>
                     <p>
-                        Developed an intelligent smart insole to monitor and analyze gait patterns and foot pressure distribution in
-                        real-time, predicting and preventing potential falls among geriatric populations.
+                        Developed an intelligent smart insole to monitor gait patterns in real-time. Produced detailed technical documentation and user guides for both technical and non-technical stakeholders.
                     </p>
                 </div>
             </div>
@@ -204,19 +217,19 @@
             <h2>Contact</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <p>Email: <a href="mailto:angela.minardi@example.com">angela.minardi@example.com</a></p>
-                    <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile"
-                            target="_blank">linkedin.com/in/yourprofile</a></p>
-                    <p>GitHub: <a href="https://github.com/yourgithub" target="_blank">github.com/yourgithub</a></p>
+                    <p>Email: <a href="mailto:r.minardi.angela@gmail.com">r.minardi.angela@gmail.com</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/angelaminardi"
+                            target="_blank">linkedin.com/in/angelaminardi</a></p>
+                    <p>GitHub: <a href="https://github.com/angelaminardi" target="_blank">github.com/angelaminardi</a></p>
                 </div>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn Profile">
+                    <a href="https://www.linkedin.com/in/angelaminardi" target="_blank" aria-label="LinkedIn Profile">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="https://github.com/yourgithub" target="_blank" aria-label="GitHub Profile">
+                    <a href="https://github.com/angelaminardi" target="_blank" aria-label="GitHub Profile">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://twitter.com/yourtwitter" target="_blank" aria-label="Twitter Profile">
+                    <a href="https://twitter.com/angelaminardi" target="_blank" aria-label="Twitter Profile">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
