--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Analyzing Reading Proficiency Trends - Angela Minardi</title>
+    <title>5G Wireless Network Simulation - Angela Minardi</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Montserrat:600&display=swap" rel="stylesheet">
@@ -18,9 +18,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
     <!-- Meta Tags for SEO -->
     <meta name="description"
-        content="Detailed analysis of reading proficiency trends using NAEP data, showcasing data cleaning, statistical analysis, and interactive visualizations.">
+        content="Detailed overview of 5G Wireless Network Simulation project, including technical documentation and analysis.">
     <meta name="keywords"
-        content="Angela Minardi, Data Analysis, Reading Proficiency, NAEP Data, Python, Pandas, Chart.js, Data Visualization">
+        content="Angela Minardi, 5G Simulation, Technical Writing, NS-3, Network Analysis, Technical Documentation">
     <!-- Viewport for Responsive Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -47,30 +47,37 @@
     <!-- Project Detail Section -->
     <section id="project-detail">
         <div class="container">
-            <h2>Analyzing Reading Proficiency Trends</h2>
+            <h2>5G Wireless Network Simulation</h2>
             <div class="project-detail-content">
-                <img src="images/project2.jpg" alt="Analyzing Reading Proficiency Trends" class="detail-img" loading="lazy">
+                <img src="images/project1.jpg" alt="5G Wireless Network Simulation" class="detail-img" loading="lazy">
                 <p>
-                    This project involves analyzing reading proficiency trends among students using datasets from the National
-                    Assessment of Educational Progress (NAEP). The analysis focuses on understanding how reading scores have
-                    evolved over time and across different demographic groups. The project demonstrates skills in data cleaning,
-                    statistical analysis, data visualization, and deriving actionable insights to support educational interventions.
+                    This project involves the development of a simulation tool using NS-3 to model and analyze 5G wireless networks.
+                    The focus was on key performance indicators such as throughput, latency, and packet loss.
+                </p>
+                <p>
+                    I authored comprehensive technical documentation, including user manuals and technical reports,
+                    to facilitate understanding and usage of the simulation tool by other researchers and professionals.
                 </p>
                 <h3>Key Features:</h3>
                 <ul>
-                    <li>Data exploration and cleaning using Python's Pandas library</li>
-                    <li>Descriptive and inferential statistical analysis</li>
-                    <li>Interactive data visualizations with Chart.js</li>
-                    <li>Comprehensive reporting and insights generation</li>
+                    <li>Simulated 5G network scenarios with varying parameters</li>
+                    <li>Analyzed network performance metrics</li>
+                    <li>Developed user guides and technical documentation</li>
+                    <li>Collaborated with a team to validate simulation results</li>
                 </ul>
                 <h3>Technologies Used:</h3>
                 <ul>
-                    <li>Python (Pandas, NumPy, SciPy, Matplotlib)</li>
-                    <li>JavaScript (Chart.js)</li>
-                    <li>HTML5 & CSS3</li>
-                    <li>Prism.js for code syntax highlighting</li>
+                    <li>NS-3 Network Simulator</li>
+                    <li>C++ Programming Language</li>
+                    <li>Gnuplot for data visualization</li>
+                    <li>Markdown and LaTeX for documentation</li>
                 </ul>
-                <a href="https://github.com/yourgithub/reading-proficiency-analysis" class="btn" target="_blank"
+                <h3>Technical Documentation:</h3>
+                <ul>
+                    <li><a href="docs/5g_simulation_report.pdf" target="_blank">Download Technical Report (PDF)</a></li>
+                    <li><a href="docs/5g_user_guide.pdf" target="_blank">Download User Guide (PDF)</a></li>
+                </ul>
+                <a href="https://github.com/angelaminardi/5g-simulation" class="btn" target="_blank"
                     aria-label="View Code on GitHub">
                     <i class="fab fa-github"></i> View Code on GitHub
                 </a>
@@ -78,21 +85,11 @@
         </div>
     </section>
 
-    <!-- Interactive Visualization Section -->
-    <section id="interactive-visualization">
+    <!-- Simulation Results Section -->
+    <section id="simulation-results">
         <div class="container">
-            <h3>Interactive Reading Scores Over Time</h3>
-            <canvas id="avgScoresChart" width="400" height="200" aria-label="Average Reading Scores Over Time Chart"
-                role="img"></canvas>
-        </div>
-    </section>
-
-    <!-- Demographic Group Analysis Section -->
-    <section id="demographic-analysis">
-        <div class="container">
-            <h3>Reading Scores by Demographic Group</h3>
-            <canvas id="demographicChart" width="400" height="200" aria-label="Reading Scores by Demographic Group Chart"
-                role="img"></canvas>
+            <h3>Simulation Results</h3>
+            <canvas id="throughputChart" width="400" height="200" aria-label="Throughput Chart" role="img"></canvas>
         </div>
     </section>
 
@@ -100,51 +97,29 @@
     <section id="code-snippets">
         <div class="container">
             <h3>Key Code Snippets</h3>
-            <pre><code class="language-python">
-// Example: Data Cleaning and Preparation
-import pandas as pd
+            <pre><code class="language-cpp">
+// Example: Setting up the simulation environment
+#include "ns3/core-module.h"
+#include "ns3/network-module.h"
+#include "ns3/mobility-module.h"
+#include "ns3/point-to-point-module.h"
 
-# Load the data
-data_2023 = pd.read_excel("2023_appendix_ltt_13.xlsx", sheet_name="RP-Performance-RED-a13")
-data_2022 = pd.read_excel("2022_appendix_ltt_9.xlsx", sheet_name="RP-Performance-RED-a09")
+using namespace ns3;
 
-# Clean the data
-data_2023_cleaned = data_2023.iloc[3:].dropna(thresh=5).reset_index(drop=True)
-data_2022_cleaned = data_2022.iloc[3:].dropna(thresh=5).reset_index(drop=True)
+int main(int argc, char *argv[]) {
+    NodeContainer ueNodes;
+    ueNodes.Create(2);
 
-# Rename columns
-columns_2023 = ["Characteristics"] + [str(year) for year in [1971, 1975, 1980, 1984, 1988, 1990, 1992, 1994, 1996, 1999, "2004_1", "2004_2", 2008, 2012, 2020, 2023]]
-data_2023_cleaned.columns = columns_2023
+    MobilityHelper mobility;
+    mobility.SetMobilityModel("ns3::ConstantPositionMobilityModel");
+    mobility.Install(ueNodes);
 
-columns_2022 = ["Characteristics"] + [str(year) for year in [1971, 1975, 1980, 1984, 1988, 1990, 1992, 1994, 1996, 1999, "2004_1", "2004_2", 2008, 2012, 2020, 2022]]
-data_2022_cleaned.columns = columns_2022
-
-# Convert data types
-numeric_columns = data_2023_cleaned.columns[1:]
-data_2023_cleaned[numeric_columns] = data_2023_cleaned[numeric_columns].apply(pd.to_numeric, errors='coerce')
-data_2022_cleaned[numeric_columns] = data_2022_cleaned[numeric_columns].apply(pd.to_numeric, errors='coerce')
+    // Further simulation setup...
+    Simulator::Run();
+    Simulator::Destroy();
+    return 0;
+}
             </code></pre>
-            <!-- Add more code snippets as needed -->
-        </div>
-    </section>
-
-    <!-- Insights and Recommendations Section -->
-    <section id="insights-recommendations">
-        <div class="container">
-            <h3>Insights and Recommendations</h3>
-            <ul>
-                <li><strong>Trend Analysis:</strong> Average reading scores have shown a consistent improvement over the years, indicating positive impacts of educational interventions.</li>
-                <li><strong>Demographic Disparities:</strong> Significant differences exist among demographic groups, with certain groups (e.g., Black, Hispanic) trailing in reading proficiency, highlighting the need for targeted support.</li>
-                <li><strong>Data Imputation Impact:</strong> Handling missing values through imputation maintained the integrity of statistical analyses, ensuring reliable insights.</li>
-                <li><strong>Recommendations for Ignite Reading:</strong>
-                    <ul>
-                        <li>Implement targeted interventions for demographic groups with lower reading scores.</li>
-                        <li>Continuous monitoring of student progress through real-time data tracking.</li>
-                        <li>Allocate resources strategically to bridge the achievement gap among underrepresented groups.</li>
-                        <li>Conduct further qualitative research to understand underlying factors affecting reading proficiency.</li>
-                    </ul>
-                </li>
-            </ul>
         </div>
     </section>
 
@@ -158,36 +133,28 @@ data_2022_cleaned[numeric_columns] = data_2022_cleaned[numeric_columns].apply(pd
         <div class="container">
             <p>&copy; 2024 Angela Minardi. All rights reserved.</p>
             <ul class="footer-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </div>
     </footer>
 
     <!-- JavaScript -->
     <script src="js/script.js"></script>
-    <!-- Custom JavaScript for Project2 -->
+    <!-- Custom JavaScript for Project1 -->
     <script>
-        // Interactive Visualization: Average Reading Scores Over Time
-        const avgScoresCtx = document.getElementById('avgScoresChart').getContext('2d');
-        const avgScoresChart = new Chart(avgScoresCtx, {
+        // Simulation Results Chart
+        const ctx = document.getElementById('throughputChart').getContext('2d');
+        const throughputChart = new Chart(ctx, {
             type: 'line',
             data: {
-                labels: ['1971', '1975', '1980', '1984', '1988', '1990', '1992', '1994', '1996', '1999', '2004', '2008', '2012', '2020', '2023'],
+                labels: ['Scenario 1', 'Scenario 2', 'Scenario 3', 'Scenario 4'],
                 datasets: [{
-                    label: '2023 Data (Age 13)',
-                    data: [220, 230, 240, 250, 260, 270, 280, 290, 300, 310, 320, 330, 340, 350, 360],
+                    label: 'Throughput (Mbps)',
+                    data: [50, 75, 60, 80],
                     backgroundColor: 'rgba(232, 73, 29, 0.2)',
                     borderColor: 'rgba(232, 73, 29, 1)',
-                    borderWidth: 2,
-                    fill: true,
-                    tension: 0.1
-                }, {
-                    label: '2022 Data (Age 9)',
-                    data: [210, 220, 230, 240, 250, 260, 270, 280, 290, 300, 310, 320, 330, 340, 350],
-                    backgroundColor: 'rgba(52, 152, 219, 0.2)',
-                    borderColor: 'rgba(52, 152, 219, 1)',
                     borderWidth: 2,
                     fill: true,
                     tension: 0.1
@@ -196,100 +163,22 @@ data_2022_cleaned[numeric_columns] = data_2022_cleaned[numeric_columns].apply(pd
             options: {
                 responsive: true,
                 plugins: {
-                    tooltip: {
-                        mode: 'index',
-                        intersect: false,
-                    },
                     title: {
                         display: true,
-                        text: 'Trends in Average Reading Scores Over Time'
+                        text: 'Throughput Across Different Scenarios'
                     }
-                },
-                interaction: {
-                    mode: 'nearest',
-                    axis: 'x',
-                    intersect: false
                 },
                 scales: {
                     x: {
                         title: {
                             display: true,
-                            text: 'Year'
+                            text: 'Simulation Scenarios'
                         }
                     },
                     y: {
                         title: {
                             display: true,
-                            text: 'Average Reading Score'
-                        },
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-
-        // Demographic Group Analysis: Reading Scores Over Time
-        const demographicCtx = document.getElementById('demographicChart').getContext('2d');
-        const demographicChart = new Chart(demographicCtx, {
-            type: 'bar',
-            data: {
-                labels: ['1971', '1975', '1980', '1984', '1988', '1990', '1992', '1994', '1996', '1999', '2004', '2008', '2012', '2020', '2022', '2023'],
-                datasets: [
-                    {
-                        label: 'White',
-                        data: [220, 225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285, 290, 295],
-                        backgroundColor: 'rgba(231, 76, 60, 0.6)'
-                    },
-                    {
-                        label: 'Black',
-                        data: [210, 215, 220, 225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285],
-                        backgroundColor: 'rgba(52, 73, 94, 0.6)'
-                    },
-                    {
-                        label: 'Hispanic',
-                        data: [215, 220, 225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285, 290],
-                        backgroundColor: 'rgba(46, 204, 113, 0.6)'
-                    },
-                    {
-                        label: 'Male',
-                        data: [225, 230, 235, 240, 245, 250, 255, 260, 265, 270, 275, 280, 285, 290, 295, 300],
-                        backgroundColor: 'rgba(52, 152, 219, 0.6)'
-                    }
-                ]
-            },
-            options: {
-                responsive: true,
-                plugins: {
-                    tooltip: {
-                        mode: 'index',
-                        intersect: false,
-                    },
-                    title: {
-                        display: true,
-                        text: 'Reading Scores by Demographic Group Over Time'
-                    },
-                    legend: {
-                        position: 'top',
-                    }
-                },
-                interaction: {
-                    mode: 'nearest',
-                    axis: 'x',
-                    intersect: false
-                },
-                scales: {
-                    x: {
-                        stacked: true,
-                        title: {
-                            display: true,
-                            text: 'Year'
-                        }
-                    },
-                    y: {
-                        stacked: true,
-                        title: {
-                            display: true,
-                            text: 'Reading Score'
+                            text: 'Throughput (Mbps)'
                         },
                         beginAtZero: true
                     }
